Stop monitoring audio streams from a deleted frame.

Before this CL, it was possible that the speaker tab indicator was not
updated correctly upon removal of frames containing audio streams.

Bug: 801846
Change-Id: If92a26edbfac93ae673b3f5a0207fcb51098effb
Reviewed-on: https://chromium-review.googlesource.com/873350
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530127}
Former-commit-id: bf4df6e26771b5f45a6107f7cf81c7c6a4fde9bf